--- a/style.css
+++ b/style.css
@@ -1,10 +1,117 @@
 /* nejsme vcerejsi, pouzivame moderni box model */
-html { box-sizing: border-box; }
-*, :after, :before { box-sizing: inherit; }
+html {
+  box-sizing: border-box;
+}
+*,
+:after,
+:before {
+  box-sizing: inherit;
+}
 
 body {
-	font-family: sans-serif;
-	font-size: 14px;
+  font-family: sans-serif;
+  font-size: 14px;
+  text-align: center;
 }
 
 /* ---------------------------------------------------- */
+h1,
+h2,
+img,
+p {
+  margin: 0;
+  padding: 0;
+}
+/* ---------------------------------------------------- */
+
+h1 {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.team {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  text-align: center;
+}
+
+.team-member {
+  border: black solid 1px;
+  box-shadow: 0 2px 2px rgba(5, 189, 161, 0.22);
+  border-radius: 10px;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+/* .team-member:not(:last-child) {
+  margin-bottom: 20px;
+} */
+
+img {
+  width: 150px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+h2 {
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 540px) {
+  .team {
+    flex-direction: row;
+    flex-wrap: wrap;
+    text-align: left;
+  }
+
+  .team-member {
+    display: flex;
+    flex: 1 1 35%;
+    margin-bottom: 0;
+    padding: 15px;
+  }
+
+  .team-member:nth-child(2n + 1) {
+    margin-right: 20px;
+  }
+
+  .team-member:nth-child(-n + 2) {
+    margin-bottom: 20px;
+  }
+
+  img {
+    align-self: flex-start;
+    width: 75px;
+    margin-right: 8px;
+  }
+
+  h2 {
+    /* margin-bottom: 20px; */
+  }
+}
+
+@media screen and (min-width: 960px) {
+  .team {
+    flex-wrap: nowrap;
+    text-align: center;
+  }
+
+  .team-member {
+    display: block;
+    flex: 1 1 25%;
+    padding: 15px;
+  }
+
+  .team-member:nth-child(-n + 2) {
+    margin-bottom: 0;
+  }
+
+  .team-member:not(:last-child) {
+    margin-right: 20px;
+  }
+
+  img {
+    width: 150px;
+  }
+}
